Selenium project with POM and TestNG and Maven and Datadriven - 2nd Commit

--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,23 @@
   <groupId>PomTestNGMaven</groupId>
   <artifactId>PomTestNGMaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
-  <build>
-    	<plugins>
-    	
+  <properties>
+		<jre.level>1.8</jre.level>
+		<jdk.level>1.8</jdk.level>
+	</properties>
+
+	<build>
+		<plugins>
+			<!-- Compiler plug-in -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+     	
     		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
